# admin-dashboard

./: package.json  pnpm-lock.yaml
api/: .gitignore  README.md  main.py  pyproject.toml  run.py
api/auth/: utils.py
api/models/: post.py  quote.py  user.py
api/queries/: user.py
api/routers/: auth.py  posts.py  quotes.py  stats.py
api/schemas/: post.py  quote.py  stats.py
api/utils/: authentication.py  database.py  exceptions.py
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/: Blog.tsx  Dashboard.tsx  Login.tsx  QuoteApi.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
